[gd_scene load_steps=5 format=3 uid="uid://bq37yla8ya707"]

[ext_resource type="Script" path="res://addons/block_code/ui/main_panel.gd" id="1_u0xju"]
[ext_resource type="PackedScene" uid="uid://dlabt3bgmpna2" path="res://addons/block_code/ui/picker/picker.tscn" id="2_hv5f3"]
[ext_resource type="PackedScene" uid="uid://c6vumewgnfquy" path="res://addons/block_code/ui/block_canvas/block_canvas.tscn" id="3_kn3j7"]
[ext_resource type="PackedScene" uid="uid://cph1k5cfximbf" path="res://addons/block_code/drag_manager/drag_manager.tscn" id="4_yijtu"]

[node name="MainPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u0xju")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Test"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Picker" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_hv5f3")]
unique_name_in_owner = true
layout_mode = 2

[node name="BlockCanvas" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_kn3j7")]
unique_name_in_owner = true
layout_mode = 2

[node name="DragManager" parent="VBoxContainer/MarginContainer" instance=ExtResource("4_yijtu")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
picker_path = NodePath("../HBoxContainer/Picker")
block_canvas_path = NodePath("../HBoxContainer/BlockCanvas")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
